Add code that show all database

--- a/Bioinformatics_Talking_to_NCBI.ipynb
+++ b/Bioinformatics_Talking_to_NCBI.ipynb
@@ -35,6 +35,66 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pubmed\n",
+      "protein\n",
+      "nuccore\n",
+      "ipg\n",
+      "nucleotide\n",
+      "structure\n",
+      "genome\n",
+      "annotinfo\n",
+      "assembly\n",
+      "bioproject\n",
+      "biosample\n",
+      "blastdbinfo\n",
+      "books\n",
+      "cdd\n",
+      "clinvar\n",
+      "gap\n",
+      "gapplus\n",
+      "grasp\n",
+      "dbvar\n",
+      "gene\n",
+      "gds\n",
+      "geoprofiles\n",
+      "medgen\n",
+      "mesh\n",
+      "nlmcatalog\n",
+      "omim\n",
+      "orgtrack\n",
+      "pmc\n",
+      "proteinclusters\n",
+      "pcassay\n",
+      "protfam\n",
+      "pccompound\n",
+      "pcsubstance\n",
+      "seqannot\n",
+      "snp\n",
+      "sra\n",
+      "taxonomy\n",
+      "biocollections\n",
+      "gtr\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show all databese \n",
+    "Entrez.email = \"seyedmilad.hashemichepi@gmail.com\" # You should say how you are.\n",
+    "handle = Entrez.einfo() # Giving all data base\n",
+    "record = Entrez.read(handle) # Giving all data base\n",
+    "for database in record['DbList']: # Print all data base\n",
+    "    print(database)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
