--- a/Bioinformatics_Talking_to_NCBI.ipynb
+++ b/Bioinformatics_Talking_to_NCBI.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
     "Entrez.email = \"seyedmilad.hashemichepi@gmail.com\" # You should say how you are.\n",
     "handle = Entrez.einfo(db=\"pubmed\") # Giving one data base.\n",
     "record = Entrez.read(handle) # Read.\n",
-    "handle.close() # After giving a result you shod close that.\n",
+    "handle.close() # After giving a result you should close that.\n",
     "print(\"All info: \",record) # Printing all info.\n",
     "# Printing base on specific selection.\n",
     "print(\"Data base name : \", record[\"DbInfo\"][\"DbName\"]) # Name.\n",
@@ -121,6 +121,38 @@
     "print(\"Count: \", record[\"DbInfo\"][\"Count\"]) # Count.\n",
     "print(\"Last update :\",record[\"DbInfo\"][\"LastUpdate\"]) # Last update.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count : 93\n",
+      "RetMax : 50\n",
+      "RetStart : 0\n",
+      "IdList : ['39655789', '39474658', '39141925', '38238766', '37100946', '37051151', '36516837', '34853814', '34360834', '34354281', '31413380', '31193057', '30837299', '30735159', '30681782', '30673550', '30542185', '30417087', '30342077', '30135538', '30110242', '29734298', '28552050', '28435453', '27553405', '27357758', '26604244', '25444237', '25394873', '24877176', '24853878', '23641364', '23519027', '23196542', '22900466', '22281573', '21630222', '19877311', '19864684', '19656960', '19587341', '18328193', '19804292', '17635050', '16874816', '16760990', '16754596', '16674313', '16628829', '16380178']\n",
+      "TranslationSet : []\n",
+      "QueryTranslation : \"Genetherapy\"[Title]\n",
+      "['39655789', '39474658', '39141925', '38238766', '37100946', '37051151', '36516837', '34853814', '34360834', '34354281', '31413380', '31193057', '30837299', '30735159', '30681782', '30673550', '30542185', '30417087', '30342077', '30135538', '30110242', '29734298', '28552050', '28435453', '27553405', '27357758', '26604244', '25444237', '25394873', '24877176', '24853878', '23641364', '23519027', '23196542', '22900466', '22281573', '21630222', '19877311', '19864684', '19656960', '19587341', '18328193', '19804292', '17635050', '16874816', '16760990', '16754596', '16674313', '16628829', '16380178']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Search in data base for find a specific result\n",
+    "Entrez.email = \"seyedmilad.hashemichepi@gmail.com\" # You should say how you are.\n",
+    "handle = Entrez.esearch(db=\"pubmed\", term=\"Genetherapy[title]\", retmax=50) # # Search in the PubMed database for a specific title. \n",
+    "record = Entrez.read(handle) # Read.\n",
+    "handle.close() # # After giving a result you should close that.\n",
+    "# Printing all info\n",
+    "for key,value in record.items():\n",
+    "    print(key,\":\" ,value)\n",
+    "# Print just ID list\n",
+    "print(record[\"IdList\"])"
    ]
   },
   {
