--- a/Bioinformatics_Talking_to_NCBI.ipynb
+++ b/Bioinformatics_Talking_to_NCBI.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'venv (Python 3.13.1)' due to a timeout waiting for the ports to get used. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "from Bio import Entrez"
    ]
@@ -15,10 +26,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\\n<!DOCTYPE eInfoResult PUBLIC \"-//NLM//DTD einfo 20190110//EN\" \"https://eutils.ncbi.nlm.nih.gov/eutils/dtd/20190110/einfo.dtd\">\\n<eInfoResult>\\n<DbList>\\n\\n\\t<DbName>pubmed</DbName>\\n\\t<DbName>protein</DbName>\\n\\t<DbName>nuccore</DbName>\\n\\t<DbName>ipg</DbName>\\n\\t<DbName>nucleotide</DbName>\\n\\t<DbName>structure</DbName>\\n\\t<DbName>genome</DbName>\\n\\t<DbName>annotinfo</DbName>\\n\\t<DbName>assembly</DbName>\\n\\t<DbName>bioproject</DbName>\\n\\t<DbName>biosample</DbName>\\n\\t<DbName>blastdbinfo</DbName>\\n\\t<DbName>books</DbName>\\n\\t<DbName>cdd</DbName>\\n\\t<DbName>clinvar</DbName>\\n\\t<DbName>gap</DbName>\\n\\t<DbName>gapplus</DbName>\\n\\t<DbName>grasp</DbName>\\n\\t<DbName>dbvar</DbName>\\n\\t<DbName>gene</DbName>\\n\\t<DbName>gds</DbName>\\n\\t<DbName>geoprofiles</DbName>\\n\\t<DbName>medgen</DbName>\\n\\t<DbName>mesh</DbName>\\n\\t<DbName>nlmcatalog</DbName>\\n\\t<DbName>omim</DbName>\\n\\t<DbName>orgtrack</DbName>\\n\\t<DbName>pmc</DbName>\\n\\t<DbName>proteinclusters</DbName>\\n\\t<DbName>pcassay</DbName>\\n\\t<DbName>protfam</DbName>\\n\\t<DbName>pccompound</DbName>\\n\\t<DbName>pcsubstance</DbName>\\n\\t<DbName>seqannot</DbName>\\n\\t<DbName>snp</DbName>\\n\\t<DbName>sra</DbName>\\n\\t<DbName>taxonomy</DbName>\\n\\t<DbName>biocollections</DbName>\\n\\t<DbName>gtr</DbName>\\n</DbList>\\n\\n</eInfoResult>\\n'\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'venv (Python 3.13.1)' due to a timeout waiting for the ports to get used. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -145,7 +159,7 @@
    "source": [
     "# Search in data base for find a specific result\n",
     "Entrez.email = \"seyedmilad.hashemichepi@gmail.com\" # You should say how you are.\n",
-    "handle = Entrez.esearch(db=\"pubmed\", term=\"Genetherapy[title]\", retmax=50) # Search in the PubMed database for a specific title. \n",
+    "handle = Entrez.esearch(db=\"pubmed\", term=\"Gene therapy[title]\", retmax=50) # Search in the PubMed database for a specific title. \n",
     "record = Entrez.read(handle) # Read.\n",
     "handle.close() # After giving a result you should close that.\n",
     "# Printing all info\n",
@@ -182,22 +196,11 @@
     "result = Entrez.read(handle) # Read.\n",
     "handle.close() # After giving a result you should close that.\n",
     "# Printing all info\n",
-    "for key,value in record.items():\n",
+    "for key,value in result.items():\n",
     "    print(key,\":\" ,value)\n",
     "print()\n",
     "# Print just ID list\n",
-    "print(\"ID list :\", record[\"IdList\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Entrez.email = \"seyedmilad.hashemichepi\"\n",
-    "# list_of_id =['39655789', '39474658', '39141925', '38238766', '37100946', '37051151', '36516837', '34853814', '34360834']\n",
-    "# print(Entrez.epost(\"pubmed\", id=\",\".join(list_of_id)).read())"
+    "print(\"ID list :\", result[\"IdList\"])"
    ]
   },
   {
