Add code for find a correct spell

--- a/Bioinformatics_Talking_to_NCBI.ipynb
+++ b/Bioinformatics_Talking_to_NCBI.ipynb
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6131,6 +6131,38 @@
     "        print(\"sub id\", length_2)\n",
     "\n",
     "        print(\"IDs :\", record[0]['LinkSetDb'][length_1]['Link'][length_2][\"Id\"]) # Show all id that exist in dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "incorrect spell is \"genetherapy\" and correct spell is \"gene therapy\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find a correct spell of a word\n",
+    "Entrez.email = \"seyedmilad.hashemichepi@gmail.com\" # You should say how you are.\n",
+    "handle = Entrez.espell(term=\"genetherapy\") # Get correct spell.\n",
+    "record = Entrez.read(handle) # Read\n",
+    "handle.close() # After giving a result you should close that.\n",
+    "# Print result\n",
+    "print(f'incorrect spell is \"{record[\"Query\"]}\" and correct spell is \"{record[\"CorrectedQuery\"]}\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
