Add code that return all db and number of it for your search keyword

--- a/Bioinformatics_Talking_to_NCBI.ipynb
+++ b/Bioinformatics_Talking_to_NCBI.ipynb
@@ -6162,7 +6162,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "# Find all result base on keyword like db name and number of that.\n",
+    "# This functional function is not exist in biopython.\n",
+    "Entrez.email = \"seyedmilad.hashemichepi@gmail.com\" # You should say how you are.\n",
+    "try:\n",
+    "    handle = Entrez.egquery(term=\"gene therapy\") # Get result. \n",
+    "    record = Entrez.read(handle) # Read result.\n",
+    "except:\n",
+    "    raise print(\"There is a problem\") # Handel error.\n",
+    "finally:\n",
+    "    handle.close() # After giving a result you should close that.\n",
+    "# Print result \n",
+    "for res in record[\"eGQueryResult\"]:\n",
+    "    print(res[\"DbName\"], res[\"Count\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4> Extraction of information from NCBI copleted.<h4>"
    ]
   }
  ],
