--- a/Bioinformatics_Talking_to_NCBI.ipynb
+++ b/Bioinformatics_Talking_to_NCBI.ipynb
@@ -6182,7 +6182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Extraction of information from NCBI copleted.<h4>"
+    "<h4> Extraction of information from NCBI completed.<h4>"
    ]
   }
  ],
